[package]
name = "rusty-pake"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4", default-features = true, features = [
    "rand_core",
    "digest",
    "group",
] }
group = "0.13.0"
rand = "0.8"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
axum = "0.8.6"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.228" }
serde_json = "1.0.145"
hex = "0.4.3"
thiserror = "2.0.17"
anyhow = "1.0.100"
serial_test = "3.2.0"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
